--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Puplic vars are available on server and client
 PUBLIC_SUPABASE="your-project.supabase.co"
 PUBLIC_SUPABASE_API_KEY="your-anonymous-key"
-PUBLIC_ROOM_SECRET="your-room-secret"
+
+# Non-public vars stay on the server
+ROOM_SECRET="your-room-secret"
